After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 540330 - print preview tooltip fails to disappear
print preview tooltip fails to disappear
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
3.2.x
Other Linux
: Normal minor
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2008-06-26 14:34 UTC by Sebastien Bacher
Modified: 2014-09-10 12:12 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
Tooltip disappeared when mouse cursor moved. (2.82 KB, patch)
2014-09-04 06:51 UTC, Ankita Patil
none Details | Review
Added threshold 20 to disappear the tooltip. (3.32 KB, patch)
2014-09-10 11:42 UTC, Ankita Patil
accepted-commit_now Details | Review

Description Sebastien Bacher 2008-06-26 14:34:19 UTC
the bug has been described on https://bugs.launchpad.net/ubuntu/+source/gedit/+bug/234711

"http://launchpadlibrarian.net/15062887/Screenshot-rfc3820.txt%20%28%7E-Documents%29%20-%20gedit.png

I have attached a screenshot. Unfortunately, the cursor does not show up when you take a screenshot; however, the cursor was actually about 6 or 7 inches away from the yellow popup.

Steps to Reproduce:

1. Open a text file with gedit.
2. Go to Print Preview.
3. Leave the cursor over the body of the text for a second or two until a yellow pop-up shows displaying the page number.
4. Move the cursor, but keep it over the body of the text.
5. The pop-up does not disappear as expected."
Comment 1 André Klapper 2012-07-29 18:22:19 UTC
Still valid in 3.2.
Comment 2 Ankita Patil 2014-09-04 06:51:49 UTC
Created attachment 285310 [details] [review]
Tooltip disappeared when mouse cursor moved. 

used has_tooltip flag to detect if mouse is in steady position or not and according to it;s value setting a tooltip.
Comment 3 Ankita Patil 2014-09-10 11:42:20 UTC
Created attachment 285820 [details] [review]
Added threshold 20 to disappear the tooltip.
Comment 4 sébastien lafargue 2014-09-10 12:04:54 UTC
Review of attachment 285820 [details] [review]:

acn
Comment 5 sébastien lafargue 2014-09-10 12:12:56 UTC
thanks for your commit, push as 37885e4