gedit-print-preview: fix tooltips apparition

We Hide the tooltip when we move the cursor and
move it only on a 20 pixels theshold.

https://bugzilla.gnome.org/show_bug.cgi?id=540330